# bed_bath_simulation

./: README.md  run_experiments.py  simulated_experiment_results.csv
care_robot_sim/: CMakeLists.txt  package.xml
care_robot_sim/config/: config.rviz  controllers_trajectory.yaml
care_robot_sim/launch/: display.launch.py  spawn.launch.py  spawn_human.launch.py  spawn_moveit.launch.py
care_robot_sim/models/human2/: model.config  model.sdf
care_robot_sim/models/human_horizontal/: model.config  model.sdf
care_robot_sim/models/human_sponge/: model.config  model.sdf
care_robot_sim/models/sponge/: model.config  model.sdf
care_robot_sim/urdf/: camera.xacro  cobot_gripper_camera.urdf.xacro  custom_cobot_gazebo.xacro  custom_gripper.xacro  human.sdf  link_joint.xacro
care_robot_sim/worlds/: patience_sponge.world  patient_env.world  patient_env_static.world  patient_env_static.world:Zone.Identifier
cobot_ik/: CMakeLists.txt  package.xml
cobot_ik/clouds/output/: post_processing.pcd  waypoints.pcd
cobot_ik/src/: process_points_image.cpp  process_points_stream.cpp  save_pcd.cpp  test_ik.cpp  test_pick_care.cpp  test_pick_care_waypoints.cpp
cobot_moveit_config/: .setup_assistant  package.xml
cobot_moveit_config/config/: chomp_planning.yaml  custom_robot.ros2_control.xacro  custom_robot.srdf  custom_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
cobot_moveit_config/launch/: demo.launch.py  demo_with_controllers.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
